--- a/adminpanel.html
+++ b/adminpanel.html
@@ -230,6 +230,7 @@
                         <th scope="col" class="px-6 py-3">Author</th>
                         <th scope="col" class="px-6 py-3">Language</th>
                         <th scope="col" class="px-6 py-3">Pages</th>
+                        <th scope="col" class="px-6 py-3">Sold</th>
                         <th scope="col" class="px-6 py-3">Content</th>
                         <th scope="col" class="px-6 py-3">Category</th>
                         <th scope="col" class="px-6 py-3">View</th>
