--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
       <div class="max-w-[1500px] mx-auto flex items-center justify-between px-4 py-2 text-[15px] h-[45px]">
         <div class="flex gap-6">
           <ul class="flex gap-6 text-[#334155] font-semibold">
-            <li><a href="#">Bestseller</a></li>
+            <li><a href="bestseller.html">Bestseller</a></li>
             <li><a href="#">Endirimlər</a></li>
             <li><a href="author.html">Müəlliflər</a></li>
             <li><a href="category.html">Klassiklər</a></li>
@@ -276,7 +276,7 @@
                   class="fa-solid fa-minus"></i></span>
             </a>
             <div id="main-links">
-              <a href="#" class="block p-[15px_0_5px]">Bestseller</a>
+              <a href="bestseller.html" class="block p-[15px_0_5px]">Bestseller</a>
               <a href="#" class="block p-[5px_0]">Endirimlər</a>
               <a href="author.html" class="block p-[5px_0]">Müəlliflər</a>
               <a href="category.html" class="block p-[5px_0]">Klassiklər</a>
@@ -382,7 +382,7 @@
   </div>
 
   <div class="max-w-[1500px] mx-auto px-4 py-[50px]">
-    <h2 class="text-[30px] text-[#0f172a]"><span class="text-[#ee2d39] mr-[10px]">Mayın</span>bestsellerləri</h2>
+    <h2 class="text-[30px] text-[#0f172a]"><span class="text-[#ee2d39] mr-[10px]">Bütün</span>kitablar</h2>
     <div id="news-container"
       class="grid gap-2 justify-center grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-6 xl:grid-cols-6 2xl:grid-cols-6 max-w-[1500px] mx-auto">
     </div>
