--- a/details.html
+++ b/details.html
@@ -179,7 +179,7 @@
       <div class="max-w-[1500px] mx-auto flex items-center justify-between px-4 py-2 text-[15px] h-[45px]">
         <div class="flex gap-6">
           <ul class="flex gap-6 text-[#334155] font-semibold">
-            <li><a href="#">Bestseller</a></li>
+            <li><a href="bestseller.html">Bestseller</a></li>
             <li><a href="#">Endirimlər</a></li>
             <li><a href="author.html">Müəlliflər</a></li>
             <li><a href="category.html">Klassiklər</a></li>
@@ -275,7 +275,7 @@
                   class="fa-solid fa-minus"></i></span>
             </a>
             <div id="main-links">
-              <a href="#" class="block p-[15px_0_5px]">Bestseller</a>
+              <a href="bestseller.html" class="block p-[15px_0_5px]">Bestseller</a>
               <a href="#" class="block p-[5px_0]">Endirimlər</a>
               <a href="author.html" class="block p-[5px_0]">Müəlliflər</a>
               <a href="category.html" class="block p-[5px_0]">Klassiklər</a>
